[package]
name = "yh-tools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1.4", features = [ "protocol-all", "path-all", "process-relaunch", "system-tray", "window-all", "notification-all", "http-all", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.20", features = ["json"] }
tokio= {version = "1.32.0",features = ["full"] }
chrono = "0.4.31"
window-shadows = "0.2.1"
rand = "0.8.5"
futures = "0.3.28"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
